--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
    
     <script src="./app.js"></script>
 
-</body>
+
+    <section class="recent-searches container">
+        <h3>Recent Searches</h3>
+        <div id="recent-list"></div>
+    </section>
+    
+    <div id="toast" class="toast"></div>
+
+    </body>
+    
 
 </html>
